--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SpaceXaminer",
+  "name": "SpaceXaminer",
   "icons": [
     {
-      "src": "http://www.spacex.com/sites/all/themes/spacex2012/favicon.ico",
+      "src": "favicon.ico",
       "sizes": "192x192",
       "type": "image/png"
     }
@@ -11,5 +11,5 @@
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#000000"
 }
