--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
-    "three": "^0.86.0"
+    "three": "^0.86.0",
+    "three-orbit-controls": "^82.1.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
