--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "static",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app/app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.4",
-    "express": "^4.15.3"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.18.12",
-    "gulp": "^3.9.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-sass": "^3.1.0",
-    "nodemon": "^1.11.0",
-    "run-sequence": "^2.0.0"
-  }
+    "name": "SpaceXaminer",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app/app.js",
+    "scripts": {
+        "start": "node app/app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.4",
+        "express": "^4.15.3"
+    },
+    "devDependencies": {
+        "browser-sync": "^2.18.12",
+        "gulp": "^3.9.1",
+        "gulp-livereload": "^3.8.1",
+        "gulp-nodemon": "^2.2.1",
+        "gulp-sass": "^3.1.0",
+        "nodemon": "^1.11.0",
+        "run-sequence": "^2.0.0"
+    }
 }
