--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,17 +1,20 @@
 engines:
-  eslint:
-    enabled: true
-  csslint:
-    enabled: true
-    checks:
-      box-sizing:
-        enabled: false
-  duplication:
-    enabled: true
-    config:
-      languages:
-      - javascript:
+    eslint:
+        enabled: true
+    csslint:
+        enabled: true
+        checks:
+            box-sizing:
+                enabled: false
+    duplication:
+        enabled: true
+        config:
+            languages:
+            - javascript:
 ratings:
-  paths:
-  - app/**
-  - "**.js"
+    paths:
+    - "app/**"
+    - "**.js"
+exclude_paths:
+    - "app/public/scripts/three.min.js"
+    - "app/public/scripts/OrbitControls.js"
