--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "app/app.js",
     "scripts": {
         "start": "node app/app.js",
-        "test": "exit 0"
+        "test": "mocha 'app/test/*.js'"
     },
     "keywords": [],
     "author": "Derek Kramer",
@@ -16,8 +16,12 @@
     },
     "devDependencies": {
         "browser-sync": "^2.18.12",
+        "chai": "^4.1.0",
+        "chai-http": "^3.0.0",
         "gulp": "^3.9.1",
         "gulp-nodemon": "^2.2.1",
-        "gulp-sass": "^3.1.0"
+        "gulp-sass": "^3.1.0",
+        "mocha": "^3.4.2",
+        "request": "^2.81.0"
     }
 }
